# sgsmm

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: .env.example  .gitignore  README.md  pyproject.toml
agent/data/: smartmoney_snapshot.json
agent/scripts/: build_snapshot.py
agent/src/: __init__.py  bot.py  bot_data.py  config.py  main.py
agent/tests/: test_bot_data.py
backtest/: Makefile  README.md  pyproject.toml  run_real_backtest.py
backtest/notebooks/: 01_data_pull.ipynb  02_position_reconstruction.ipynb  03_sortino_calc.ipynb  04_strategy_sim.ipynb  05_proof_chart.ipynb
backtest/scripts/: demo_equity_curve.py
backtest/src/: __init__.py  classifier.py  data_loader.py  dune_source.py  panel.py  pnl.py  simulator.py  sortino.py  universe.py
backtest/src/sgsmm_backtest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backtest/tests/: test_classifier.py  test_pnl.py  test_simulator.py  test_sortino.py
contracts/: .env.example  .gitignore  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AgentIdentityNFT.sol  DecisionLog.sol  MirrorExecutor.sol  SGSMMVault.sol
contracts/test/: AgentIdentityNFT.t.sol  DecisionLog.t.sol  MirrorExecutor.t.sol  SGSMMVault.t.sol  SGSMMVaultInvariant.t.sol
docs/: architecture.md
frontend/: README.md  package.json
frontend/scripts/: build_data.py
indexer/: README.md  package.json  ponder.config.ts  ponder.schema.ts
indexer/abis/: DecisionLog.ts  L1StandardBridge.ts  LendlePool.ts  SGSMMVault.ts
indexer/src/: index.ts
(+16 files in other folders)
