[project]
name = "sgsmm-agent"
version = "0.1.0"
description = "SGSMM autonomous agent — Sortino classifier + decision engine + Mantle tx submitter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "web3>=7.0",
    "eth-account>=0.13",
    "eth-utils>=4.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "apscheduler>=3.10",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "python-telegram-bot>=21",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[project.scripts]
sgsmm-agent = "src.main:run"
sgsmm-bot = "src.bot:main"

[tool.ruff]
line-length = 100
target-version = "py312"
