[project]
name = "sgsmm-backtest"
version = "0.1.0"
description = "Phase 1 kill-criterion backtest harness for SGSMM"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "web3>=7.0",
    "eth-abi>=5.0",
    "httpx>=0.27",
    "pyarrow>=17.0",
    "plotly>=5.24",
    "jupyterlab>=4.3",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
